# ldraw2mesh

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/ldraw2mesh/: __init__.py  _native.pyi  cli.py  convert.py  gltf.py  library.py  materials.py  normals.py  scene.py  transform.py
src/: lib.rs  normals.rs
tests/: test_cli.py  test_convert.py  test_gltf.py  test_library.py  test_materials.py  test_native.py  test_normals.py  test_scene.py  test_transform.py
tests/fixtures/: model.ldr
tests/fixtures/ldraw/: LDConfig.ldr
