[package]
name = "ldraw2mesh-native"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "py-clone"] }
numpy = "0.28.0"
pyo3-log = "0.13.4"
log = "0.4"
ldr_tools = { git = "https://github.com/ScanMountGoat/ldr_tools_blender", rev = "ee0a1a6" }
map_py = { git = "https://github.com/ScanMountGoat/map_py", rev = "2dea8c4" }

[build-dependencies]
pyo3-build-config = "0.28.3"
